# qt_vcpkg_emscripten

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  build_emscripten.bat  generate_emscripten.bat  main.cmake  main.cpp  run_emscripten.sh  vcpkg.json
